overflow fix

--- a/src/Todo.css
+++ b/src/Todo.css
@@ -10,6 +10,7 @@
   width: 90%;
   height: 70vh;
   max-width: 20%;
+  overflow-y: auto;
   margin: 0 auto;
 }
 .Todo-in {
